2004-05-24  Pascal Obry  <pascal@obry.org>

	* afile.adb:
	(CB): Rewrite to be thread safe as expected by the server.

	* afile_strm.ads:
	Removed.

2004-05-22  Pascal Obry  <pascal@obry.org>

	* afile.out:
	Initial revision.

	* makefile:
	(RT_STD): Add afile.

	* afile.adb, afile_strm.ads:
	Initial revision.

	* tpc.adb:
	Set to UNIX format.

2004-05-20  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tpc.adb, tpc.out, makefile:
	Transient pages cleaner regression test.

2004-05-19  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sp.adb, ssp.adb, sp_pck.ads, sp_pck.adb:
	All common code moved to Sp_Pck.

	* ctab.adb:
	Free table at the end.

	* back_proc.adb:
	Base procedure for sback and ssback regression tests.

	* sback.adb, ssback.adb:
	Move all code to back_proc.adb

2004-05-17  Pascal Obry  <pascal@obry.org>

	* ctab.adb:
	Minor reformatting.
	Update copyright notice.

	* sessions2.adb:
	Clear session data before leaving and set session callback to null.
	Minor reformatting.

	* sessions.adb, sessions3.adb:
	Clear session data before leaving.
	Update copyright notice.

	* makefile:
	(RT_STD): Add ctable.

	* sp.adb, ssp.adb:
	Factorize code in Sp_Pck.

	* sp_pck.ads, sp_pck.adb:
	Initial revision.

2004-05-16  Pascal Obry  <pascal@obry.org>

	* ctable.adb, ctable.out:
	Initial revision.

2004-04-27  Pascal Obry  <pascal@obry.org>

	* sockto.adb:
	(Port): Set to 1275.
	(Client_Side): Add entry Start.
	Call entry Start after binding the server to ensure that the
	 server is ready before trying to connect to it.
	Minor reformatting.

2004-04-27  Pascal Obry  <pascal@obry.org>

	* makefile:
	(WSDL_ATESTS): Add test_wsdl5.

	* test_wsdl5.wsdl, test_wsdl5.adb, test_wsdl5.res:
	Initial revision.

2004-04-22  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sockto.adb, ssockto.adb:
	Remove DOS style CR at end of line.

	* sslcfg.adb, sslcfg.out, makefile:
	Regression test for not found certificate.

2004-04-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
