@@ -1,3 +1,8 @@
+2004-05-25  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* afile.adb:
+	(CB): Add return from exception handler.
+
 2004-05-24  Pascal Obry  <pascal@obry.org>
 
 	* afile.adb:
